--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 #heros{
     width: 100vw;
     height:700px;
-    /* background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(./netflix.img); */
+    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(./netflix.img);
     background-size: 100vw 100vh; }
  #nav{
    width: 80%;
