--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/* *{
+*{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
    
-} */
+}
 /* heros section */
 #heros{
     width: 100vw;
